# alaya

./: .env.example  .gitignore  .par-evidence.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  justfile  llms.txt  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci-cli.yml  ci.yml  codeql.yml  deploy.yml  release-cli.yml  release-drafter.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_auth_rls_bypass.py  003_extraction_schema.py  004_intelligence_pipeline.py  005a_search_columns.py  005b_search_indexes.py  006_consolidator_schema.py  007_multi_tenant_hardening.py  008_access_propagation.py  009_pipeline_traces_token_classes.py
docker/: Caddyfile  Caddyfile.prod  deploy.sh  init-db.sql  seed.py
docs/: CHANGELOG-run6.2.md  ROADMAP.md  deployment.md
docs/audits/: 2026-04-13-security-best-practices.md
docs/backlog/: BACKLOG.md  run3-known-limitations.md
docs/concept/: alaya-memory-architecture.html
docs/operations/: sanitize-corpus.md
docs/superflow/audits/: 2026-04-07-run1-post-audit.md  2026-04-25-run6.1-audit.md
docs/superflow/plans/: 2026-04-07-alayaos-pivot.md
docs/superflow/specs/: 2026-04-07-alayaos-pivot-brief.md  2026-04-07-alayaos-pivot-design.md  2026-04-07-run3-intelligence-eval.md
docs/vision/: README.md  alaya-between-future-artifacts-ru.md  alaya-implementation-note-ru.md  alaya-master-vision-session-summary-ru.md  alaya-operational-memory-appendix-ru.md  alaya-operational-memory-whitepaper-en.md  alaya-operational-memory-whitepaper-ru.md  alaya-vision-short-share-ru.md
scripts/: audit_part_of_hierarchy.py  bench.py  bench_ingest.py  bench_report.py  eval_cortex.py  eval_extraction.py  eval_real.py  sanitize_corpus.py  smoke-test.sh
tests/: test_bench_drain_budget.py  test_bench_ingest_throttle.py  test_bench_report.py  test_boundaries.py  test_migration_009_forward_down.py  test_sanitize_corpus.py
tests/fixtures/bench/: .gitignore  large.jsonl  medium.jsonl  small.jsonl
tests/fixtures/gold/: adversarial_01.json  adversarial_02.json  adversarial_03.json  adversarial_04.json  adversarial_05.json  adversarial_06.json  adversarial_07.json  edge_01.json  (+42 more)
(+1 files in other folders)
