[project]
name = "alayaos"
version = "0.1.0"
description = "Corporate memory platform"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
alayaos-core = { workspace = true }
alayaos-api = { workspace = true }
alayaos-cli = { workspace = true }
alayaos-connectors = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real PostgreSQL and Redis",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.22.1",
]
