[project]
name = "alayaos"
version = "0.1.0"
description = "Corporate memory platform"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/cli-go"]

[tool.uv.sources]
alayaos-core = { workspace = true }
alayaos-api = { workspace = true }
alayaos-cli = { workspace = true }
alayaos-connectors = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-m 'not integration'"
markers = [
    "integration: requires real PostgreSQL and Redis",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "testcontainers[postgres]>=4.0",
    "psycopg2-binary>=2.9.12",
]
